--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -11,6 +11,7 @@
 	<groupId>com.microservices</groupId>
 	<artifactId>accounts</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>accounts</name>
 	<description>Microservices-account project for Spring Boot</description>
 	<url/>
@@ -28,6 +29,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<jib-maven-plugin.version>3.4.4</jib-maven-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -100,6 +102,17 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<!-- Jib Plugin for Building Docker Images -->
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib-maven-plugin.version}</version>
+				<configuration>
+					<to>
+						<image>sushantpaudel77/${project.artifactId}</image>
+					</to>
 				</configuration>
 			</plugin>
 		</plugins>
