--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,14 +1,20 @@
 spring:
   application:
     name: accounts
+
+  profiles:
+    active: qa
+
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
-    password: ''
+    password: ""
+
   h2:
     console:
       enabled: true
+
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
@@ -18,3 +24,15 @@ spring:
 
 server:
   port: 8080
+
+build:
+  version: 3.0
+
+accounts:
+  message: Welcome to my-Banking application
+  contactDetails:
+    name: John Doe
+    email: johndoe@example.com
+  onCallSupport:
+    - "(777)444-222"
+    - "(777)222-444"
