--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8090
+
 spring:
+  profiles:
+    active: qa
+
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -14,3 +18,15 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+build:
+  version: 3.0
+
+loans:
+  message: Welcome to my-Banking application
+  contactDetails:
+    name: John Doe
+    email: johndoe@example.com
+  onCallSupport:
+    - "(777)444-222"
+    - "(777)222-444"
