--- a/configserver/src/main/resources/config/accounts-prod.yml
+++ b/configserver/src/main/resources/config/accounts-prod.yml
@@ -1,12 +1,7 @@
-spring:
-  config:
-    activate:
-      on-profile: prod
-
 build:
   version: 1.0
 
-loans:
+accounts:
   message: Welcome to my-Banking application Prod APIs
   contactDetails:
     name: Bob finch
