--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,20 +1,21 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: accounts
 
   profiles:
-    active: qa
+    active: prod
 
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
     password: ""
-
   h2:
     console:
       enabled: true
-
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
@@ -22,17 +23,5 @@ spring:
     show-sql: true
     format-sql: true
 
-server:
-  port: 8080
-
-build:
-  version: 3.0
-
-accounts:
-  message: Welcome to my-Banking application
-  contactDetails:
-    name: John Doe
-    email: johndoe@example.com
-  onCallSupport:
-    - "(777)444-222"
-    - "(777)222-444"
+  config:
+    import: "optional:configserver:http://localhost:8071/"
