--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -2,8 +2,11 @@ server:
   port: 8090
 
 spring:
+  application:
+    name: loans
+
   profiles:
-    active: qa
+    active: prod
 
   datasource:
     url: jdbc:h2:mem:testdb
@@ -19,14 +22,5 @@ spring:
       ddl-auto: update
     show-sql: true
 
-build:
-  version: 3.0
-
-loans:
-  message: Welcome to my-Banking application
-  contactDetails:
-    name: John Doe
-    email: johndoe@example.com
-  onCallSupport:
-    - "(777)444-222"
-    - "(777)222-444"
+  config:
+    import: "optional:configserver:http://localhost:8071/"
