--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -13,10 +13,17 @@ spring:
     username: root
     password: root
   jpa:
+    hibernate:
+#      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
-    sql:
-      init:
-        mode: always
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+  sql:
+    init:
+      mode: always
 
   config:
     import: "optional:configserver:http://localhost:8071/"
