--- a/docker-compose/prod/common-config.yml
+++ b/docker-compose/prod/common-config.yml
@@ -19,3 +19,5 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: prod
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
