--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -1,16 +1,71 @@
 services:
-  rabbit:
-    image: rabbitmq:3-management
-    container_name: rabbitmq-ms
+
+  #  rabbit:
+  #    image: rabbitmq:3-management
+  #    container_name: rabbitmq-ms
+  #    ports:
+  #      - "5672:5672"
+  #      - "15672:15672"
+  #    healthcheck:
+  #      test: ["CMD", "rabbitmqctl", "status"]
+  #      start_period: 10s
+  #      interval: 10s
+  #      timeout: 5s
+  #      retries: 5
+  #    extends:
+  #      file: common-config.yml
+  #      service: network-deploy-service
+
+  accountsdb:
+    image: mysql
+    container_name: accountsdb
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: accountsdb
     healthcheck:
-      test: ["CMD", "rabbitmqctl", "status"]
-      start_period: 10s
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 10
       interval: 10s
-      timeout: 5s
-      retries: 5
+      start_period: 10s
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
+  loansdb:
+    image: mysql
+    container_name: loansdb
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: loansdb
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 10
+      interval: 10s
+      start_period: 10s
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
+  cardsdb:
+    image: mysql
+    container_name: cardsdb
+    ports:
+      - "3308:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: cardsdb
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 10
+      interval: 10s
+      start_period: 10s
     extends:
       file: common-config.yml
       service: network-deploy-service
@@ -20,22 +75,22 @@ services:
     container_name: configserver-ms
     ports:
       - "8071:8071"
-    depends_on:
-      rabbit:
-        condition: service_healthy
+    #    depends_on:
+    #      rabbit:
+    #        condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl --fail --silent http://localhost:8071/actuator/health/readiness || exit 1"]
       start_period: 20s
       interval: 10s
       timeout: 5s
       retries: 10
-    extends:
-      file: common-config.yml
-      service: microservice-base-config
     environment:
       SPRING_APPLICATION_NAME: configserver
       SPRING_PROFILES_ACTIVE: default
       MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info,refresh,busrefresh
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
 
   accounts:
     image: "sushantpaudel77/accounts"
@@ -45,8 +100,11 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      accountsdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: accounts
+      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
     extends:
       file: common-config.yml
       service: microservice-with-import
@@ -59,8 +117,11 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      cardsdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: cards
+      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
     extends:
       file: common-config.yml
       service: microservice-with-import
@@ -73,8 +134,11 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      loansdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: loans
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
     extends:
       file: common-config.yml
       service: microservice-with-import
