--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -8,19 +8,40 @@ spring:
   application:
     name: cards
 
+#  datasource:
+#    url: jdbc:mysql://localhost:3308/cardsdb
+#    username: root
+#    password: root
+#  jpa:
+#    hibernate:
+##      ddl-auto: create-drop
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQL8Dialect
+#        format_sql: true
+
   datasource:
-    url: jdbc:mysql://localhost:3308/cardsdb
-    username: root
-    password: root
-  jpa:
-    hibernate:
-#      ddl-auto: create-drop
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-        format_sql: true
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: password
+    h2:
+      console:
+        enabled: true
+        path: /h2-console
+        settings:
+          web-allow-others: true
+    jpa:
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
+          jdbc:
+            lob:
+              non_contextual_creation: true
+
   sql:
     init:
       mode: always
