--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -41,7 +41,6 @@ spring:
           jdbc:
             lob:
               non_contextual_creation: true
-
   sql:
     init:
       mode: always
@@ -59,4 +58,17 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: "*"           # expose all endpoints including shutdown
+      base-path: /actuator
+  endpoint:
+    health:
+      show-details: when-authorized
+    shutdown:
+      enabled: true            # enable shutdown endpoint
+
+
+info:
+  app:
+    name: "accounts"
+    description: "My-Banking Cards Application"
+    version: "1.0.0"
