--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -70,6 +70,10 @@
 <!--			<artifactId>mysql-connector-j</artifactId>-->
 <!--		</dependency>-->
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
