ADD: open feign clients and improve docker compose

--- a/eurekaserver/src/main/resources/application.yml
+++ b/eurekaserver/src/main/resources/application.yml
@@ -7,6 +7,18 @@ spring:
 # Remove any eureka client configuration from here
 # since it will come from the Config Server
 
+server:
+  port: 8070
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    fetchRegistry: false
+    registerWithEureka: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
 management:
   endpoints:
     web:
