--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -75,11 +75,11 @@ services:
     container_name: configserver-ms
     ports:
       - "8071:8071"
-    #    depends_on:
-    #      rabbit:
-    #        condition: service_healthy
+    depends_on:
+      eurekaserver:
+        condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail --silent http://localhost:8071/actuator/health/readiness || exit 1"]
+      test: [ "CMD-SHELL", "curl --fail --silent http://localhost:8071/actuator/health/readiness || exit 1" ]
       start_period: 20s
       interval: 10s
       timeout: 5s
@@ -87,6 +87,25 @@ services:
     environment:
       SPRING_APPLICATION_NAME: configserver
       SPRING_PROFILES_ACTIVE: default
+      MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info,refresh,busrefresh
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
+
+  eurekaserver:
+    image: "sushantpaudel77/eurekaserver"
+    container_name: eurekaserver-ms
+    ports:
+      - "8070:8070"
+    healthcheck:
+      test: [ "CMD-SHELL", "curl --fail --silent http://localhost:8070/actuator/health/readiness || exit 1" ]
+      start_period: 20s
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    environment:
+      SPRING_APPLICATION_NAME: eurekaserver
       MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info,refresh,busrefresh
     extends:
       file: common-config.yml
@@ -100,11 +119,14 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
       accountsdb:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: accounts
       SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
     extends:
       file: common-config.yml
       service: microservice-with-import
@@ -117,11 +139,14 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
       cardsdb:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: cards
       SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
     extends:
       file: common-config.yml
       service: microservice-with-import
@@ -134,11 +159,14 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
       loansdb:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: loans
       SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
     extends:
       file: common-config.yml
       service: microservice-with-import
