--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -8,39 +8,39 @@ spring:
   profiles:
     active: prod
 
-#  datasource:
-#    url: jdbc:mysql://localhost:3307/loansdb
-#    username: root
-#    password: root
-#  jpa:
-#    hibernate:
-##      ddl-auto: create-drop
-#      ddl-auto: update
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.MySQL8Dialect
-#        format_sql: true
-
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-    h2:
-      console:
-        enabled: true
-        path: /h2-console
-        settings:
-          web-allow-others: true
-    jpa:
-      show-sql: true
-      properties:
-        hibernate:
-          format_sql: true
-          jdbc:
-            lob:
-              non_contextual_creation: true
+    url: jdbc:mysql://localhost:3307/loansdb
+    username: root
+    password: root
+  jpa:
+    hibernate:
+#      ddl-auto: create-drop
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+
+#  datasource:
+#    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password:
+#    h2:
+#      console:
+#        enabled: true
+#        path: /h2-console
+#        settings:
+#          web-allow-others: true
+#    jpa:
+#      show-sql: true
+#      properties:
+#        hibernate:
+#          format_sql: true
+#          jdbc:
+#            lob:
+#              non_contextual_creation: true
   sql:
     init:
       mode: always
