Refractor: docker compose for h2db

--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -54,10 +54,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -81,9 +77,18 @@
 				<artifactId>jib-maven-plugin</artifactId>
 				<version>${jib-maven-plugin.version}</version>
 				<configuration>
+					<from>
+						<image>eclipse-temurin:17-jdk-alpine</image>
+					</from>
 					<to>
 						<image>sushantpaudel77/${project.artifactId}</image>
+						<credHelper></credHelper> <!-- leave empty -->
+						<auth>
+							<username></username>
+							<password></password>
+						</auth>
 					</to>
+					<allowInsecureRegistries>true</allowInsecureRegistries>
 				</configuration>
 			</plugin>
 		</plugins>
