--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: gatewayserver
 
   config:
-    import: "optional:configserver:http://localhost:8071/"
+    import: "optional:configserver:http://configserver:8071/"
 
   cloud:
     gateway:
@@ -44,8 +44,6 @@ logging:
     org.springframework.cloud.gateway: INFO
     org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: INFO
     org.springframework.cloud.gateway.filter.GatewayMetricsFilter: INFO
-
-
 
 
 # Optional RabbitMQ settings if needed in future
