--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -1,46 +1,20 @@
-spring:
-  application:
-    name: configserver
-  profiles:
-    active: git
-  cloud:
-    config:
-      server:
-        git:
-          uri: "https://github.com/sushantpaudel77/my-Banking-application-config-server"
-          default-label: main
-          timeout: 5
-          clone-on-start: true
-          force-pull: true
-
-# Enable Eureka for Config Server
-eureka:
-  client:
-    enabled: true
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://localhost:8070/eureka/  # Fixed port
-  instance:
-    prefer-ip-address: true
-    lease-renewal-interval-in-seconds: 10
-    lease-expiration-duration-in-seconds: 30
-
-encrypt:
-  key: ${ENCRYPT_KEY}
-
-server:
-  port: 8071
-
 management:
   endpoints:
     web:
       exposure:
         include: "*"
   health:
-    probes:
+    readiness-state:
       enabled: true
-    livenessstate:
+    liveness-state:
       enabled: true
-    readinessstate:
-      enabled: true
+  endpoint:
+    health:
+      probes:
+        enabled: true
+
+server:
+  port: 8071
+
+encrypt:
+  key: ${ENCRYPT_KEY}
