bug fix: made all microservices healthy

--- a/eurekaserver/pom.xml
+++ b/eurekaserver/pom.xml
@@ -75,7 +75,7 @@
 				<version>${jib-maven-plugin.version}</version>
 				<configuration>
 					<from>
-						<image>eclipse-temurin:17-jdk-alpine</image>
+						<image>eclipse-temurin:17-jdk</image>
 					</from>
 					<to>
 						<image>sushantpaudel77/${project.artifactId}</image>
