--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -1,20 +1,49 @@
+spring:
+  application:
+    name: configserver
+  profiles:
+    active: git
+  cloud:
+    config:
+      server:
+        git:
+          uri: "https://github.com/sushantpaudel77/my-Banking-application-config-server"
+          default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
+
 management:
   endpoints:
     web:
       exposure:
-        include: "*"
-  health:
-    readiness-state:
-      enabled: true
-    liveness-state:
-      enabled: true
+        include: "*"           # expose all endpoints including shutdown
+      base-path: /actuator
   endpoint:
     health:
-      probes:
-        enabled: true
+      show-details: when-authorized
+    shutdown:
+      enabled: true            # enable shutdown endpoint
+
+  health:
+    probes:
+      enabled: true
+    livenessstate:
+      enabled: true
+    readinessstate:
+      enabled: true
+
+  info:
+    env:
+      enabled: true
 
 server:
   port: 8071
 
 encrypt:
   key: ${ENCRYPT_KEY}
+
+logging:
+  level:
+    org.springframework.cloud.config: INFO
+    org.springframework.web: INFO
