--- a/docker-compose/h2DB/docker-compose.yml
+++ b/docker-compose/h2DB/docker-compose.yml
@@ -5,13 +5,15 @@ services:
     ports:
       - "8071:8071"
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail --silent http://localhost:8071/actuator/health/readiness || exit 1"]
-      start_period: 20s
+      test: "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
       timeout: 5s
       retries: 10
+      start_period: 10s
     environment:
       SPRING_APPLICATION_NAME: configserver
+      SPRING_PROFILES_ACTIVE: git
+      ENCRYPT_KEY: fdohfdfo30r3nr0u23rkoewf0892u3r0938jn3f30r309
     extends:
       file: common-config.yml
       service: microservice-base-config
@@ -25,11 +27,11 @@ services:
       configserver:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail --silent http://localhost:8070/actuator/health/readiness || exit 1"]
-      start_period: 20s
+      test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
       timeout: 5s
       retries: 10
+      start_period: 10s
     extends:
       file: common-config.yml
       service: microservice-configserver-config
@@ -47,7 +49,7 @@ services:
       eurekaserver:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail --silent http://localhost:8080/actuator/health/readiness | grep -q UP || exit 1"]
+      test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
       timeout: 5s
       retries: 10
@@ -69,7 +71,7 @@ services:
       eurekaserver:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail --silent http://localhost:8090/actuator/health/readiness | grep -q UP || exit 1"]
+      test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
       timeout: 5s
       retries: 10
@@ -91,7 +93,7 @@ services:
       eurekaserver:
         condition: service_healthy
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --silent http://localhost:9000/actuator/health/readiness | grep -q UP || exit 1" ]
+      test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
       timeout: 5s
       retries: 10
@@ -114,6 +116,12 @@ services:
         condition: service_healthy
       cards:
         condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:8072/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     environment:
       SPRING_APPLICATION_NAME: gatewayserver
     extends:
