Add: circuit breaker in apigateway

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
       hibernate.format_sql: true
 
   config:
-    import: "optional:configserver:http://configserver:8071/"
+    import: "optional:configserver:http://localhost:8071/"
 
 management:
   endpoints:
