--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: gatewayserver
 
   config:
-    import: "optional:configserver:http://configserver:8071/"
+    import: "optional:configserver:http://localhost:8071/"
 
   cloud:
     gateway:
@@ -44,13 +44,20 @@ info:
     description: "ezyPay apigateway Application"
     version: "1.0.0"
 
-
 logging:
   level:
     com.microservices.gatewayserver: DEBUG
     org.springframework.cloud.gateway: INFO
     org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: INFO
     org.springframework.cloud.gateway.filter.GatewayMetricsFilter: INFO
+
+resilience4j.circuitbreaker:
+  configs:
+    default:
+      slidingWindowSize: 10
+      permittedNumberOfCallsInHalfOpenState: 2
+      failureRateThreshold: 50
+      waitDurationInOpenState: 10s
 
 
 # Optional RabbitMQ settings if needed in future
