--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -24,8 +24,9 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: true
+
   config:
-    import: "optional:configserver:http://configserver:8071/"
+    import: "optional:configserver:http://localhost:8071/"
 
 management:
   endpoints:
