Bugfix: ( actuator) events, circuitbrekers

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -29,6 +29,11 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8071/"
 
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled: true
+
 management:
   endpoints:
     web:
@@ -53,18 +58,30 @@ management:
     env:
       enabled: true
 
-  cloud:
-    openfeign:
-      circuitbreaker:
-        enabled=true:
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        slidingWindowSize: 10
+        permittedNumberOfCallsInHalfOpenState: 2
+        failureRateThreshold: 50
+        waitDurationInOpenState: 10s
+        eventConsumerBufferSize: 10  # Enable event consumption
+        recordExceptions:
+          - java.net.ConnectException
+          - java.net.SocketTimeoutException
+          - java.io.IOException
+        ignoreExceptions:
+          - java.lang.IllegalArgumentException
 
-resilience4j.circuitbreaker:
-  configs:
-    default:
-      slidingWindowSize: 10
-      permittedNumberOfCallsInHalfOpenState: 2
-      failureRateThreshold: 50
-      waitDurationInOpenState: 10s
+    instances:
+      cards:
+        baseConfig: default
+        registerHealthIndicator: true
+
+      loans:
+        baseConfig: default
+        registerHealthIndicator: true
 
 info:
   app:
@@ -75,3 +92,4 @@ info:
 logging:
   level:
     com.microservices.accounts: DEBUG
+    io.github.resilience4j: DEBUG  # Add this for circuit breaker logs
