change: docker compose and add redis properties

--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -1,4 +1,21 @@
 services:
+
+  #  rabbit:
+  #    image: rabbitmq:3-management
+  #    container_name: rabbitmq-ms
+  #    ports:
+  #      - "5672:5672"
+  #      - "15672:15672"
+  #    healthcheck:
+  #      test: ["CMD", "rabbitmqctl", "status"]
+  #      start_period: 10s
+  #      interval: 10s
+  #      timeout: 5s
+  #      retries: 5
+  #    extends:
+  #      file: common-config.yml
+  #      service: network-deploy-service
+
   accountsdb:
     image: mysql:8.0
     container_name: accountsdb
