--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -25,6 +25,23 @@ spring:
     properties:
       hibernate.format_sql: true
 
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/accountsDB
+#    username: your_username
+#    password: your_password
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#      ddl-auto: create-drop
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQL8Dialect
+#        format_sql: true
+
+
   config:
     import: "optional:configserver:http://localhost:8071/"
 
@@ -61,3 +78,9 @@ info:
 logging:
   level:
     com.microservices.cards: DEBUG
+
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: guest
+#    password: guest
