--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -24,6 +24,23 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: true
+
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/accountsDB
+#    username: your_username
+#    password: your_password
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#      ddl-auto: create-drop
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQL8Dialect
+#        format_sql: true
+
   config:
     import: "optional:configserver:http://localhost:8071/"
 
@@ -31,13 +48,13 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"           # expose all endpoints including shutdown
+        include: "*"
       base-path: /actuator
   endpoint:
     health:
       show-details: when-authorized
     shutdown:
-      enabled: true            # enable shutdown endpoint
+      enabled: true
 
   health:
     probes:
@@ -60,3 +77,9 @@ info:
 logging:
   level:
     com.microservices.loans: DEBUG
+
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: guest
+#    password: guest
